[gd_scene load_steps=5 format=2]

[ext_resource path="res://Sprites/misc/tilesheet.png" type="Texture" id=1]
[ext_resource path="res://Scenes/apple.gd" type="Script" id=2]
[ext_resource path="res://Sounds/sfx/applecollect.ogg" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]

[node name="Apple" type="Area2D" groups=["Apple"]]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 0, 0, 16, 16 )

[node name="Position2D" type="Position2D" parent="."]

[node name="Kill" type="Timer" parent="."]
wait_time = 6.0

[node name="Fall" type="Timer" parent="."]
wait_time = 0.527

[node name="sfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = 1.0

[connection signal="area_entered" from="." to="." method="_on_Apple_area_entered"]
[connection signal="timeout" from="Kill" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Fall" to="." method="_on_Fall_timeout"]
